--- a/website/blog/_site.yml
+++ b/website/blog/_site.yml
@@ -1,7 +1,7 @@
 name: "blog"
 title: "Maryland COVID-19 dashboard"
 description: |
-  Maryland COVID-19 dashboard — blog
+  Blog — Maryland COVID-19 dashboard
 base_url: http://prayaggordy.github.io/D3-covid-map/website/
 google_analytics: "UA-167555707-1"
 collections:
