--- a/website/blog/_site.yml
+++ b/website/blog/_site.yml
@@ -1,7 +1,7 @@
 name: "blog"
-title: "Maryland COVID-19 dashboard"
+title: "Maryland COVID-19 Dashboard"
 description: |
-  Blog — Maryland COVID-19 dashboard
+  Blog — Maryland COVID-19 Dashboard
 base_url: http://prayaggordy.github.io/D3-covid-map/website/
 google_analytics: "UA-167555707-1"
 collections:
@@ -21,6 +21,6 @@ navbar:
       href: about.html
     - text: "Dashboard"
       href: ../../index.html
-output: 
+output:
   distill::distill_article:
     css: styles.css
