--- a/website/blog/_site.yml
+++ b/website/blog/_site.yml
@@ -1,7 +1,7 @@
 name: "blog"
-title: "Maryland COVID-19 Dashboard"
+title: "Maryland COVID-19 Tracker"
 description: |
-  Blog — Maryland COVID-19 Dashboard
+  Blog — Maryland COVID-19 Tracker
 base_url: http://prayaggordy.github.io/D3-covid-map/website/
 google_analytics: "UA-167555707-1"
 collections:
