--- a/config.yaml
+++ b/config.yaml
@@ -1,24 +1,32 @@
 data:
-  cases_by_county: "https://opendata.arcgis.com/datasets/0573e90adab5434f97b082590c503bc1_0.csv"
-  cases_statewide: "https://opendata.arcgis.com/datasets/18582de727934249b92c52542395a3bf_0.csv"
-  cases_by_zip: "https://opendata.arcgis.com/datasets/5f459467ee7a4ffda968139011f06c46_0.csv"
-  cases_by_race: "https://opendata.arcgis.com/datasets/2362c46380aa48f9a18f88571d2090bb_0.csv"
-  cases_by_age: "https://opendata.arcgis.com/datasets/68fbe34617cd450aa423e27692f503b0_0.csv"
-  cases_by_gender: "https://opendata.arcgis.com/datasets/4719f38f874c4e4fb16b7955317f7f9c_0.csv"
-  deaths_by_county: "https://opendata.arcgis.com/datasets/3dbd3e633b344c7c9a0d166b1d6a2b03_0.geojson"
-  deaths_statewide: "https://opendata.arcgis.com/datasets/096cca5f77404a06babb9367530136b9_0.csv"
-  deaths_by_race: "https://opendata.arcgis.com/datasets/312715a843064ef18879eb726f64c63a_0.csv"
-  deaths_by_age: "https://opendata.arcgis.com/datasets/b51451a222cd4c3d89a58c3393212cc7_0.csv"
-  deaths_by_gender: "https://opendata.arcgis.com/datasets/4245fa848a7348dcb8733b93f3f45d7d_0.csv"
-  hospitalizations_statewide: "https://opendata.arcgis.com/datasets/bf3f201b056b4c488b5dac3441b7ac20_0.csv"
-  hospitalizations_by_county: "https://healthdata.gov/resource/anag-cw7u.json?state=MD"
-  vaccinations_by_county: "https://opendata.arcgis.com/datasets/89c9c1236ca848188d93beb5928f4162_0.csv"
-  vaccinations_by_zip: "https://opendata.arcgis.com/datasets/2aa355e7595e4972b976413b26a2ff33_0.csv"
-  vaccinations_statewide: "https://opendata.arcgis.com/datasets/6172d15d5e4541ba8137e040591f7538_0.csv"
-  testing_by_county: "https://opendata.arcgis.com/datasets/fdedcfbed9af43f8b79c87c53229a0d8_0.csv"
-  testing_statewide: "https://opendata.arcgis.com/datasets/e5d044bda3a44bfa8ba224145617cda0_0.csv"
-  positivity_by_county: "https://opendata.arcgis.com/datasets/54d028e340f44e88945e26579eecd447_0.csv"
-  positivity_statewide: "https://opendata.arcgis.com/datasets/e5d044bda3a44bfa8ba224145617cda0_0.csv"
+  county:
+  	cases_by_county: "https://opendata.arcgis.com/datasets/0573e90adab5434f97b082590c503bc1_0.csv"
+  	deaths_by_county: "https://opendata.arcgis.com/datasets/3dbd3e633b344c7c9a0d166b1d6a2b03_0.geojson"
+  	vaccinations_by_county: "https://opendata.arcgis.com/datasets/89c9c1236ca848188d93beb5928f4162_0.csv"
+  	testing_by_county: "https://opendata.arcgis.com/datasets/fdedcfbed9af43f8b79c87c53229a0d8_0.csv"
+  	positivity_by_county: "https://opendata.arcgis.com/datasets/54d028e340f44e88945e26579eecd447_0.csv"
+  statewide:
+    cases_statewide: "https://opendata.arcgis.com/datasets/18582de727934249b92c52542395a3bf_0.csv"
+    deaths_statewide: "https://opendata.arcgis.com/datasets/096cca5f77404a06babb9367530136b9_0.csv"
+    vaccinations_statewide: "https://opendata.arcgis.com/datasets/6172d15d5e4541ba8137e040591f7538_0.csv"
+    testing_statewide: "https://opendata.arcgis.com/datasets/e5d044bda3a44bfa8ba224145617cda0_0.csv"
+    positivity_statewide: "https://opendata.arcgis.com/datasets/e5d044bda3a44bfa8ba224145617cda0_0.csv"
+    hospitalizations_statewide: "https://opendata.arcgis.com/datasets/bf3f201b056b4c488b5dac3441b7ac20_0.csv"
+  zip:
+    cases_by_zip: "https://opendata.arcgis.com/datasets/5f459467ee7a4ffda968139011f06c46_0.csv"
+    vaccinations_by_zip: "https://opendata.arcgis.com/datasets/2aa355e7595e4972b976413b26a2ff33_0.csv"
+  demographics:
+    cases_by_race: "https://opendata.arcgis.com/datasets/2362c46380aa48f9a18f88571d2090bb_0.csv"
+    cases_by_age: "https://opendata.arcgis.com/datasets/68fbe34617cd450aa423e27692f503b0_0.csv"
+    cases_by_gender: "https://opendata.arcgis.com/datasets/4719f38f874c4e4fb16b7955317f7f9c_0.csv"
+    deaths_by_race: "https://opendata.arcgis.com/datasets/312715a843064ef18879eb726f64c63a_0.csv"
+    deaths_by_age: "https://opendata.arcgis.com/datasets/b51451a222cd4c3d89a58c3393212cc7_0.csv"
+    deaths_by_gender: "https://opendata.arcgis.com/datasets/4245fa848a7348dcb8733b93f3f45d7d_0.csv"
+    vaccinations_by_race: "https://opendata.arcgis.com/datasets/7ca637ad378647e084e01566591d3d13_0.csv"
+    vaccinations_by_ethnicity: "https://opendata.arcgis.com/datasets/643f465088fe4d6dbdca00c262cf341c_0.csv"
+    vaccinations_by_age: "https://opendata.arcgis.com/datasets/889da2193bd84807a97df84f8db16d8e_0.csv"
+    vaccinations_by_gender: "https://opendata.arcgis.com/datasets/b84df3e7c3b3470e8f961b0989e20be4_0.csv"
+  hospitalizations_by_hospital: "https://healthdata.gov/resource/anag-cw7u.json?state=MD"
 
 census:
   population_county:
