--- a/config.yaml
+++ b/config.yaml
@@ -16,12 +16,26 @@ data:
     cases_by_zip: "https://opendata.arcgis.com/datasets/5f459467ee7a4ffda968139011f06c46_0.csv"
     vaccinations_by_zip: "https://opendata.arcgis.com/datasets/2aa355e7595e4972b976413b26a2ff33_0.csv"
   demographics:
-    cases_by_race: "https://opendata.arcgis.com/datasets/2362c46380aa48f9a18f88571d2090bb_0.csv"
-    cases_by_age: "https://opendata.arcgis.com/datasets/68fbe34617cd450aa423e27692f503b0_0.csv"
-    cases_by_gender: "https://opendata.arcgis.com/datasets/4719f38f874c4e4fb16b7955317f7f9c_0.csv"
-    deaths_by_race: "https://opendata.arcgis.com/datasets/312715a843064ef18879eb726f64c63a_0.csv"
-    deaths_by_age: "https://opendata.arcgis.com/datasets/b51451a222cd4c3d89a58c3393212cc7_0.csv"
-    deaths_by_gender: "https://opendata.arcgis.com/datasets/4245fa848a7348dcb8733b93f3f45d7d_0.csv"
+    race:
+      urls:
+        cases_by_race: "https://opendata.arcgis.com/datasets/2362c46380aa48f9a18f88571d2090bb_0.csv"
+        deaths_by_race: "https://opendata.arcgis.com/datasets/312715a843064ef18879eb726f64c63a_0.csv"
+      cns:
+        "African American": "African_American"
+        "Unknown": "Not_Available"
+    age:
+      urls:
+        cases_by_age: "https://opendata.arcgis.com/datasets/68fbe34617cd450aa423e27692f503b0_0.csv"
+        deaths_by_age: "https://opendata.arcgis.com/datasets/b51451a222cd4c3d89a58c3393212cc7_0.csv"
+      cns:
+
+    gender:
+      urls:
+        cases_by_gender: "https://opendata.arcgis.com/datasets/4719f38f874c4e4fb16b7955317f7f9c_0.csv"
+        deaths_by_gender: "https://opendata.arcgis.com/datasets/4245fa848a7348dcb8733b93f3f45d7d_0.csv"
+      cns:
+
+  vaccinations:
     vaccinations_by_race: "https://opendata.arcgis.com/datasets/7ca637ad378647e084e01566591d3d13_0.csv"
     vaccinations_by_ethnicity: "https://opendata.arcgis.com/datasets/643f465088fe4d6dbdca00c262cf341c_0.csv"
     vaccinations_by_age: "https://opendata.arcgis.com/datasets/889da2193bd84807a97df84f8db16d8e_0.csv"
